# double-ratchet

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: dr.rs  lib.rs
tests/: signal.rs
