[package]
name = "double-ratchet"
version = "0.1.0"
authors = ["S.R. Verschoor <sebastian@zeroknowledge.me>"]
edition = "2018"
description = "Double Ratchet key management for exchanging encrypted messages between two parties."
repository = "https://github.com/sebastianv89/double-ratchet"
readme = "README.md"
keywords = ["double-ratchet", "forward-secrecy", "future-secrecy"]
categories = ["cryptography", "no-std"]
license = "BSD-3-Clause"

[badges]
travis-ci = {repository = "sebastianv89/double-ratchet"}

[dependencies]
rand_core = "0.5"
hashbrown = "0.11.2"

[dev-dependencies]
aes = "0.6.0"
block-modes = "0.7.0"
clear_on_drop = "0.2.4"
generic-array = "0.14.4"
hkdf = "0.10.0"
hmac = "0.10.1"
sha2 = "0.9.3"
subtle = "2.4.0"
x25519-dalek = "1.1.1"

[features]
default = ["std"]
std = []
# Allow doctests with mock objects
# See: https://github.com/rust-lang/rust/issues/45599
test = []


